force-app/main/default/objects/Safety_Audit__c/Safety_Audit__c.object-meta.xml
<CustomObject>
    <description>Safety audit records for EPC project sites capturing scores, findings, and closure status.</description>
    <label>Safety Audit</label>
    <nameField>
        <displayFormat>SAU-{00000}</displayFormat>
        <label>Audit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Safety Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>