force-app/main/default/objects/Safety_Audit__c/fields/Auditor__c.field-meta.xml
<CustomField>
    <fullName>Auditor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Auditor</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Safety Audits</relationshipLabel>
    <relationshipName>Safety_Audits_Auditor</relationshipName>
    <type>Lookup</type>
</CustomField>