force-app/main/default/objects/Safety_Audit__c/fields/Findings__c.field-meta.xml
<CustomField>
    <fullName>Findings__c</fullName>
    <label>Findings Summary</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>