force-app/main/default/objects/Safety_Audit__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <label>Score (%)</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>